@@ -1,6 +1,7 @@
 2009-02-06 TualatriX <tualatrix@gmail.com>
 
-	* templatetags/comment.py, views/comment.py, views/post.py: Store
+	* templatetags/comment.py, views/comment.py,
+	views/post.py,pulog/views/favourites.py:  Store
 	cookie for CommentForm.
 
 2009-02-05 TualatriX <tualatrix@gmail.com>
